images functionality deleted for client decision, css mediaqueries added for generator and posts, overlap problem in posts fixed with spacer-divs

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,10 @@ header .header__container__icons span {
     position: absolute;
     z-index: 5;
 }
+.headerSpacer{
+    height: 110px;
+    width: 100%;
+}
 
 .loggedInModal{
     opacity: 0;
@@ -292,12 +296,12 @@ header .headerBlog__logoContainer__logo{
 /*Post Generator*/
 .blogMain__postBackground__postGenerator{
     position: fixed;
-    top: 100px;
+    top: 250px;
     opacity: 0;
     visibility: hidden;
     transition: visibility 0s, opacity 0.5s;
-    width:800px;
-    height:550px;
+    width:830px;
+    height:200px;
     background-color: #f5f7fa;
     border-radius: 25px;
     display: flex;
@@ -307,10 +311,6 @@ header .headerBlog__logoContainer__logo{
 .blogMain__postBackground__postGenerator-active{
     visibility: visible;
     opacity: 1;
-}
-.blogMain__postBackground__container{
-    position: fixed;
-    z-index: 50;
 }
 .blogMain__postBackground__postGenerator__container{
     display: flex;
@@ -365,65 +365,31 @@ header .headerBlog__logoContainer__logo{
     color: #A6AFB8;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.blogMain__postBackground__postGenerator__imgOrVideo{
-    width: 100%;
-    height: 350px;
-    background-color: #efefef;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.blogMain__postBackground__postGenerator__imgOrVideo__filesInput{
-    opacity: 0;
-    position: absolute;
-    height: 350px;
-    width: 100%;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    z-index: 2;
-}
-.blogMain__postBackground__postGenerator__imgOrVideo__filesInput:hover{
-    cursor: pointer;
-}
-.blogMain__postBackground__postGenerator__imgOrVideo__postMedia{
-    border-radius: 25px;
-    height: 330px;
-    position: absolute;
-}
-.blogMain__postBackground__postGenerator__imgOrVideo{
-    cursor: pointer;
-}
-.blogMain__postBackground__postGenerator__imgOrVideo__container{
-    height: 70px;
-    width:  70px;
-}
+
+
+
 
 /*Posts List*/
 .blogMain__postBackground__postGroup{
-    text-align: center;
-    list-style-type: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding-bottom: 100px;
 }
 
 
 
 /*Post*/
 .postContainer{
- /*SEGUIR*/
-}
-.postMain{ 
     
+}
+.postMain{  
     margin-top: 20px;
     transition: visibility 0s, opacity 0.5s;
-    width:800px;
-    height:500px;
+    width:790px;
+    height:140px;
     background-color: #f5f7fa;
     border-radius: 25px;
     display: flex;
@@ -433,7 +399,7 @@ header .headerBlog__logoContainer__logo{
 .post__textContainer{
     text-align: start;
     width: 100%;
-    height: 130px;
+    height: 100px;
     background-color: #f5f7fa;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
@@ -484,6 +450,10 @@ footer p {
 .footer__text{
     padding-left: 9%;
     padding-right: 9%;
+}
+.footerSpacer{
+    height: 115px;
+    width: 100%;
 }
 
 
@@ -799,7 +769,7 @@ footer p {
 }
 .registerModalContainer__registerModal__container__emailRegister{
     width: 100%;
-    height: 460px;
+    height: 425px;
     display: flex;
     flex-direction: column;
     border-bottom: 2px #21374F solid;
@@ -807,7 +777,7 @@ footer p {
 
 .registerModalContainer__registerModal__container__emailRegister__emailInput{
     font-family: 'Roboto', sans-serif;
-    margin-top: 140px;
+    margin-top: 160px;
     border: none;
     appearance: none;
     width: 230px;
@@ -886,7 +856,7 @@ footer p {
 
 /*Register button*/
 .registerModalContainer__registerModal__container__registerButton{
-    margin-top: 55px;
+    margin-top: 70px;
     margin-left: 35px;
     background-color: #FEBC12; 
     border: none;
